fix cover on ios

--- a/css/main.css
+++ b/css/main.css
@@ -206,16 +206,17 @@ a.button:hover {
 .hero {
   width: 100%;
   height: 100%;
-  background: url("../img/KevandKit.jpg") no-repeat center center fixed;;
+  background: url("../img/KevandKit.jpg") no-repeat center center ;
+  background-attachment: fixed;
   background-size: cover;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-@media only screen and (min-device-width : 375px) and (-webkit-min-device-pixel-ratio : 2) {
+@media only screen and (max-width : 600px)  {
   .hero {
-    background-attachment: scroll
+    background-attachment: scroll;
   }
 }
 
